# chimera

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/ADR/: 0001-event-sourced-kernel.md  0002-capability-security.md
src/chimera/: __init__.py  cli.py  demo.py
src/chimera/agents/: __init__.py  base.py
src/chimera/events/: __init__.py  models.py  store.py
src/chimera/plugins/: __init__.py  registry.py
src/chimera/runtime/: __init__.py  budget.py  kernel.py  process.py
src/chimera/security/: __init__.py  capabilities.py
tests/: test_core.py  test_kernel.py
